
[package]

name = "twopoint"
version = "0.1.0"

description = "Encrypted UDP messaging between two endpoints using AES-128-GCM"
authors = ["Lua MacDougall <lua@foxgirl.dev>"]

categories = ["network-programming", "cryptography"]
keywords = ["tunnel", "point-to-point", "udp", "encryption"]

repository = "https://github.com/luavixen/twopoint"

license = "MIT"

edition = "2024"

[dependencies]

rand = "0.9"
rand_chacha = "0.9"

aes-gcm = "=0.11.0-rc.0"

hex = "0.4"
